force-app/main/default/objects/Product2/fields/DC_Allocation_Required__c.field-meta.xml
<CustomField>
    <fullName>DC_Allocation_Required__c</fullName>
    <label>Allocation Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>