force-app/main/default/objects/Product2/fields/DC_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>DC_Asset_Type__c</fullName>
    <label>Asset Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>