force-app/main/default/objects/Product2/fields/DC_Income_Category__c.field-meta.xml
<CustomField>
    <fullName>DC_Income_Category__c</fullName>
    <label>Income Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>