force-app/main/default/objects/Product2/fields/DC_Number_of_Assets__c.field-meta.xml
<CustomField>
    <fullName>DC_Number_of_Assets__c</fullName>
    <label>Number of Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>