force-app/main/default/objects/Product2/fields/Power_Model__c.field-meta.xml
<CustomField>
    <fullName>Power_Model__c</fullName>
    <description>Determines the model by which we are charging for power. Only applicable to power products. Informs Asset creation logic once products are sold.</description>
    <label>Power Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amp</fullName>
            </value>
            <value>
                <fullName>kW</fullName>
            </value>
            <value>
                <fullName>Circuit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>