force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>High level product segmentation.</description>
    <label>Product Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Connectivity</fullName>
            </value>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>IDF</fullName>
            </value>
            <value>
                <fullName>CDT</fullName>
            </value>
            <value>
                <fullName>TSL</fullName>
            </value>
            <value>
                <fullName>H12</fullName>
            </value>
            <value>
                <fullName>PCA</fullName>
            </value>
            <value>
                <fullName>PCB</fullName>
            </value>
            <value>
                <fullName>H144</fullName>
            </value>
            <value>
                <fullName>RUS</fullName>
            </value>
            <value>
                <fullName>POE</fullName>
            </value>
            <value>
                <fullName>H21</fullName>
            </value>
            <value>
                <fullName>H24</fullName>
            </value>
            <value>
                <fullName>H28</fullName>
            </value>
            <value>
                <fullName>CAB</fullName>
            </value>
            <value>
                <fullName>H48</fullName>
            </value>
            <value>
                <fullName>H06</fullName>
            </value>
            <value>
                <fullName>H72</fullName>
            </value>
            <value>
                <fullName>H96</fullName>
            </value>
            <value>
                <fullName>BPC</fullName>
            </value>
            <value>
                <fullName>ANT</fullName>
            </value>
            <value>
                <fullName>MBX</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>CGE</fullName>
            </value>
            <value>
                <fullName>XO</fullName>
            </value>
            <value>
                <fullName>HRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>